syntax = "proto3";

package psdbconnect.v1alpha1;

import "query.proto";
import "topodata.proto";
import "vtrpc.proto";
import "binlogdata.proto";

option go_package = "github.com/planetscale/airbyte-source/proto/psdbconnect/v1alpha1;psdbconnectv1alpha1";

//enumcheck:exhaustive
enum TabletType {
  option allow_alias = true; // so we can have read_only and batch co-exist

  // REPLICA replicates from primary. It is used to serve live traffic.
  // A REPLICA can be promoted to PRIMARY. A demoted PRIMARY will go to REPLICA.
  replica = 0;
  // PRIMARY is the primary server for the shard. Only PRIMARY allows DMLs.
  primary = 1;

  // RDONLY (old name) / BATCH (new name) is used to serve traffic for
  // long-running jobs. It is a separate type from REPLICA so
  // long-running queries don't affect web-like traffic.
  read_only = 2;
  batch = 2;

}

message SyncRequest {
  string table_name = 1;
  TableCursor cursor = 2;
  TabletType tablet_type = 3;
  bool include_inserts  = 4;
  bool include_updates  = 5;
  bool include_deletes = 6;
  repeated string columns = 7;
  // if specified, these cells are used to pick source tablets from.
  // defaults to the cell of the vtgate serving the VStream API.
  repeated string cells = 8;
}

message VStreamFlags {
  // align streams
  bool minimize_skew = 1;
  // how often heartbeats must be sent when idle (seconds)
  uint32 heartbeat_interval = 2;
  // stop streams on a reshard (journal event)
  bool stop_on_reshard = 3;
  // if specified, these cells (comma-separated) are used to pick source tablets from.
  // defaults to the cell of the vtgate serving the VStream API.
  string cells = 4;
  string cell_preference = 5;
  string tablet_order = 6;
}

// VStreamRequest is the payload for VStream.
message VStreamRequest {
  vtrpc.CallerID caller_id = 1;

  topodata.TabletType tablet_type = 2;

  // position specifies the starting point of the bin log positions
  // as well as the keyspace-shards to pull events from.
  // position is of the form 'ks1:0@MySQL56/<mysql_pos>|ks2:-80@MySQL56/<mysql_pos>'.
  binlogdata.VGtid vgtid = 3;
  binlogdata.Filter filter = 4;
  VStreamFlags flags = 5;
}

message DeletedRow {
  query.QueryResult result = 1;
}

message UpdatedRow {
  query.QueryResult before = 1;
  query.QueryResult after = 2;
}

message SyncResponse {
  repeated query.QueryResult result = 1;
  TableCursor cursor = 2;
  vtrpc.RPCError error = 3;
  repeated DeletedRow deletes = 4;
  repeated UpdatedRow updates = 5;
}

// VStreamResponse is streamed by VStream.
message VStreamResponse {
  repeated binlogdata.VEvent events = 1;
}

message TableCursor {
  string shard = 1;
  string keyspace = 2;
  string position = 3;
  query.QueryResult last_known_pk = 4;
}

service Connect {
  rpc Sync(SyncRequest) returns (stream SyncResponse) {}
  rpc VStream(VStreamRequest) returns (stream VStreamResponse) {}
}

